--- a/statistical-computing/Project/README
+++ b/statistical-computing/Project/README
@@ -1,1 +1,12 @@
 
+**Data**
+
+[wine-quality](https://github.com/JiaRuiShao/Data-Mining-using-R/blob/master/statistical-computing/Project/winequality-red.csv)
+
+**R raw file**
+
+[R file](https://github.com/JiaRuiShao/Data-Mining-using-R/blob/master/statistical-computing/Project/stat%20computing%20final%20project.R)
+
+**Report**
+
+[Final Report](https://github.com/JiaRuiShao/Data-Mining-using-R/blob/master/statistical-computing/Project/STA%203000%20Project%20Report.pdf)
